# product_checker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  bot_actions_helper.py  bot_menu_helper.py  bot_photo_helper.py  config.py  dates_recognition.py  db.sql  entities.py  env.yml  install.sh  message_texts.py  minio_client.py  pyproject.toml
example_config/: config.json  credentials.json
product_checker_bot/: __main__.py  alarm.py  config.py  db.py  message_texts.py
product_checker_bot/handlers/: __init__.py  bot_menus.py  help.py  inline_menu_button.py  photo.py  start.py  text_message.py
product_checker_bot/services/: __init__.py  dates_recognition.py  minio_client.py
